--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -343,113 +343,58 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
-            
-  # deploy-backend:
-  #   docker:
-  #     - image: python:3.10-alpine3.16
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     # Add ssh keys with fingerprint
-  #     - add_ssh_keys:
-  #       fingerprints:
-  #         - "a6:3f:75:c1:34:1f:c7:8d:42:cc:c4:4a:61:55:1c:88"
-     
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           apk add --update --no-cache ansible tar gzip nodejs npm curl aws-cli
-  #     - run:
-  #         name: Deploy backend
-  #         command: |
-  #           pwd
-  #           cd backend
-  #           touch .env
-  #           echo ENVIRONMENT=production > ".env"
-  #           echo TYPEORM_CONNECTION=postgres >> ".env"
-  #           echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> ".env"
-  #           echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> ".env"
-  #           echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> ".env"
-  #           echo NODE_ENV=production >> ".env"
-  #           echo TYPEORM_HOST=$TYPEORM_HOST >> ".env"
-  #           echo TYPEORM_PORT=$TYPEORM_PORT >> ".env"
-  #           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ".env"
-  #           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ".env"
-  #           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ".env"
-            
-  #           pwd
-  #           ls -al
-  #           npm install
-  #           npm run build
-  #           cd ..
-  #           pwd
-  #           ls -al
-  #           # Zip the directory
-  #           tar -C backend -czvf artifact.tar.gz .
-  #           cd .circleci/ansible
-  #           echo "Contents  of the inventory.txt file is -------"
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt deploy-backend.yml
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  #     - revert-migrations:
-  #           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
-  
-
-  # smoke-test:
-  #   docker:
-  #     # Lightweight Docker image
-  #     - image: python:3.10-alpine3.16 
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           apk add --update --no-cache tar gzip nodejs npm curl aws-cli
-  #     - run:
-  #         name: Get backend url and Backend smoke test.
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #           --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-  #           --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #           --output text)
-  #           echo ${BACKEND_IP}
+  smoke-test:
+    docker:
+      # Lightweight Docker image
+      - image: python:3.10-alpine3.16 
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm curl aws-cli
+      - run:
+          name: Get backend url and Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query "Reservations[*].Instances[*].[PublicIpAddress]" \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --output text)
+            echo ${BACKEND_IP}
             
-  #           export BACKEND=$(echo $BACKEND_IP | grep -o '[^ ]*$')
+            export BACKEND=$(echo $BACKEND_IP | grep -o '[^ ]*$')
             
-  #           echo $BACKEND
-  #           export API_URL="http://${BACKEND}:3030"
-  #           echo "API_URL=${API_URL}"
-  #           echo "Sleeping for 1 minute"
-  #           sleep 60
-  #           if curl -v "${API_URL}/api/status" | grep "ok"
-  #           then
-  #             return 0
-  #           else
-  #             return 1
-  #           fi 
-  #     - run:
-  #         name: Frontend smoke test.
-  #         command: |
-  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
-  #           echo ${URL}
+            echo $BACKEND
+            export API_URL="http://${BACKEND}:3030"
+            echo "API_URL=${API_URL}"
+            echo "Sleeping for 1 minute"
+            sleep 60
+            if curl -v "${API_URL}/api/status" | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi 
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            echo ${URL}
             
-  #           if curl -s ${URL} | grep "Welcome"
-  #           then
-  #             # Change this to 0 after the job fails
-  #             return 0
-  #           else
-  #             return 1
-  #           fi
+            if curl -s ${URL} | grep "Welcome"
+            then
+              # Change this to 0 after the job fails
+              return 0
+            else
+              return 1
+            fi
       
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  #     - revert-migrations:
-  #           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
 
 #   cloudfront-update:
 #     docker:
@@ -512,8 +457,8 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
